--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -3,7 +3,7 @@
 	email = onanypoint@gmail.com
 
 [core]
-	editor = vim
+	editor = nano
 	whitespace = fix, -indent-with-non-tab, trailing-space, cr-at-eol
 	excludesfile = ~/.gitignore.base
 
@@ -33,6 +33,7 @@
     cm = commit -m
     cem = commit --allow-empty -m
     cam = commit -am
+    cnv = commit --no-verify
     # cd = commit --amend
     #############
     d = diff
