Update tmux configuration file

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -21,7 +21,7 @@ set-option -g history-limit 10000
 set-option -g mouse on 
 
 # GNU-Screen compatible prefix 
-set-option -g prefix2 C-a 
+set-option -g prefix2 C-Space
 # bind-key C-a send-prefix -2 
 
 # don't rename windows automatically 
@@ -33,6 +33,12 @@ setw -g pane-base-index 1
 
 # Set time for message display
 set-option -g display-time 1000
+
+############################################################################ 
+# Alias 
+############################################################################
+
+set -g command-alias renum='move-window -r'
 
 ############################################################################ 
 # Bindings 
