Update tmux config to 2.9

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,101 +1,100 @@
-############################## 
-#  _ 
-# | |_ _ __ ___  _   ___  __ 
-# | __| '_ ` _ \| | | \ \/ / 
-# | |_| | | | | | |_| |>  < 
-#  \__|_| |_| |_|\__,_/_/\_\ 
-# 
-############################# 
+##############################
+#  _
+# | |_ _ __ ___  _   ___  __
+# | __| '_ ` _ \| | | \ \/ /
+# | |_| | | | | | |_| |>  <
+#  \__|_| |_| |_|\__,_/_/\_\
+#
+#############################
 
-# Need a quick reminder 
-# https://tmuxcheatsheet.com/ 
+# Need a quick reminder
+# https://tmuxcheatsheet.com/
 
-############################################################################ 
-# Global options 
-############################################################################ 
+############################################################################
+# Global options
+############################################################################
 
-# large history 
-set-option -g history-limit 10000 
+# large history
+set-option -g history-limit 10000
 
-# enable mouse mode (tmux 2.1 and above) 
-set-option -g mouse on 
+# enable mouse mode (tmux 2.1 and above)
+set-option -g mouse on
 
-# GNU-Screen compatible prefix 
+# GNU-Screen compatible prefix
 set-option -g prefix2 C-Space
-# bind-key C-a send-prefix -2 
+# bind-key C-a send-prefix -2
 
-# don't rename windows automatically 
-set-option -g allow-rename off 
+# don't rename windows automatically
+set-option -g allow-rename off
 
-# Start windows and panes at 1, not 0 
-set-option -g base-index 1 
-setw -g pane-base-index 1 
+# Start windows and panes at 1, not 0
+set-option -g base-index 1
+setw -g pane-base-index 1
 
 # Set time for message display
 set-option -g display-time 1000
 
-############################################################################ 
-# Alias 
+############################################################################
+# Alias
 ############################################################################
 
 set -g command-alias renum='move-window -r'
 
-############################################################################ 
-# Bindings 
+############################################################################
+# Bindings
 ############################################################################
 
-# reload tmux conf 
-bind-key r source-file ~/.tmux.conf \; display " Reloaded!" 
+# reload tmux conf
+bind-key r source-file ~/.tmux.conf \; display " Reloaded!"
 
-# Panes --------------------------------------------------------------- 
+# Panes ---------------------------------------------------------------
 
-# list panes 
-bind-key Space list-panes 
+# list panes
+bind-key Space list-panes
 
-# break-pane 
-bind-key Enter break-pane 
+# break-pane
+bind-key Enter break-pane
 
-# new split in current pane (horizontal / vertical) 
-bind-key - split-window -v # split pane horizontally 
-bind-key _ split-window -h # split pane vertically 
+# new split in current pane (horizontal / vertical)
+bind-key - split-window -v # split pane horizontally
+bind-key _ split-window -h # split pane vertically
 
-# use the vim motion keys to move between panes 
-bind-key h select-pane -L 
-bind-key j select-pane -D 
-bind-key k select-pane -U 
-bind-key l select-pane -R 
+# use the vim motion keys to move between panes
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-# resizing 
-bind-key -r H resize-pane -L 2 
-bind-key -r J resize-pane -D 2 
-bind-key -r K resize-pane -U 2 
-bind-key -r L resize-pane -R 2 
+# resizing
+bind-key -r H resize-pane -L 2
+bind-key -r J resize-pane -D 2
+bind-key -r K resize-pane -U 2
+bind-key -r L resize-pane -R 2
 
 # Moving around windows
 bind-key S-Left swap-window -t -1
 bind-key S-Right swap-window -t +1
 
 ############################################################################
-# Status Bar Styling 
+# Status Bar Styling
 ############################################################################
 
 # Message Formating
-set -g message-fg "colour0"
-set -g message-bg "colour3"
+set -g message-style fg=colour0,bg=colour3
 
 # Common Formating
 set -g status-justify "left"
 set -g status "on"
-set -g status-attr "none"
+set -g status-style fg=black,bg=green
 
 # Left Formating
 set -g status-left-length "100"
-set -g status-left-attr "none"
+set -g status-left-style none
 set -g status-left "#[fg=colour248, bg=colour234] #S #[fg=colour2, nobold, nounderscore, noitalics]"
 
 # Right Formating
 set -g status-right-length "160"
-set -g status-right-attr "none"
+set -g status-right-style none
 set -g status-right "#{prefix_highlight} #[fg=colour0,nobold,nounderscore,noitalics] %R - %Y-%m-%d "
 
 # Window Status
@@ -105,24 +104,22 @@ setw -g window-status-current-format " [#I] #{?#{==:#{window_name},fish},#{b:pan
 setw -g window-status-separator ""
 
 # Pane-Border
-set -g pane-border-bg default
-set -g pane-active-border-bg default
-set -g pane-border-fg "colour240"
-set -g pane-active-border-fg "colour245"
+set -g pane-border-style fg=colour240,bg=default
+set -g pane-active-border-style fg=colour245,bg=default
 
 ############################################################################
-# Tmux Nested Session 
+# Tmux Nested Session
 ############################################################################
 
-# Reference : https://medium.freecodecamp.org/tmux-in-practice-local-and-nested-remote-tmux-sessions-4f7ba5db8795 
+# Reference : https://medium.freecodecamp.org/tmux-in-practice-local-and-nested-remote-tmux-sessions-4f7ba5db8795
 # set window-status-current-style  "fg=colour3,bg=colour0" \; \
-    
+
 bind-key -T root F12 \
     set-option prefix "None" \; \
     set-option key-table off \; \
-    set status-style "fg=colour241, bg=colour0" \; \
+    set status-style fg=colour241,bg=colour0 \; \
     display " TMUX OUTER OFF" \; \
-    refresh-client -S 
+    refresh-client -S
 
 bind-key -T off F12 \
     set-option -u prefix \; \
@@ -133,19 +130,19 @@ bind-key -T off F12 \
     display " TMUX OUTER ON" \; \
     refresh-client -S
 
-############################################################################ 
-# Tmux Plugin Manager 
-############################################################################ 
+############################################################################
+# Tmux Plugin Manager
+############################################################################
 
-# Installation : https://github.com/tmux-plugins/tpm 
+# Installation : https://github.com/tmux-plugins/tpm
 # Install plugins with prefix + I
 
-# List of plugins 
-set -g @plugin 'tmux-plugins/tmux-resurrect' 
-set -g @plugin 'tmux-plugins/tmux-continuum' 
-set -g @plugin 'tmux-plugins/tmux-yank' 
+# List of plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @continuum-save-interval '60' 
+set -g @continuum-save-interval '60'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf) 
-run '~/.tmux/plugins/tpm/tpm' 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
