Add week number to status line

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -95,7 +95,7 @@ set -g status-left "#[fg=colour248, bg=colour234] #S #[fg=colour2, nobold, nound
 # Right Formating
 set -g status-right-length "160"
 set -g status-right-style none
-set -g status-right "#{prefix_highlight} #[fg=colour0,nobold,nounderscore,noitalics] %R - %Y-%m-%d "
+set -g status-right "#{prefix_highlight} #[fg=colour0,nobold,nounderscore,noitalics] %R - %Y-%m-%d - W%V "
 
 # Window Status
 setw -g window-status-current-style "fg=colour0 bg=colour3"
