--- a/dotfiles/.zpreztorc
+++ b/dotfiles/.zpreztorc
@@ -25,6 +25,7 @@ zstyle ':prezto:*:*' color 'yes'
 # The order matters.
 zstyle ':prezto:load' pmodule \
   'environment' \
+  'git' \
   'terminal' \
   'editor' \
   'history' \
@@ -35,6 +36,8 @@ zstyle ':prezto:load' pmodule \
   'homebrew' \
   'python' \
   'prompt'
+
+zstyle ':prezto:module:git:alias' skip 'yes'
 
 #
 # Editor
