Update mackup backup

--- a/dotfiles/.mackup.cfg
+++ b/dotfiles/.mackup.cfg
@@ -7,13 +7,14 @@ directory = dotfiles
 
 # Dotfiles
 bash
+curl
 git
 git-config
 mackup
 prezto
 tmux
+vscode
 youtube-dl
-curl
 zsh
 
 # Application
