--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -143,6 +143,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @continuum-save-interval '60'
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
