--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -34,6 +34,9 @@ setw -g pane-base-index 1
 # Set time for message display
 set-option -g display-time 1000
 
+# Set default terminal
+set-option -g default-terminal screen-256color
+
 ############################################################################
 # Alias
 ############################################################################
