Fix Conda error with tmux config PATH management

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -37,6 +37,10 @@ set-option -g display-time 1000
 # Set default terminal
 set-option -g default-terminal screen-256color
 
+# Set default shell
+set -g default-command "$SHELL"
+
+
 ############################################################################
 # Alias
 ############################################################################
