--- a/dotfiles/.zpreztorc
+++ b/dotfiles/.zpreztorc
@@ -40,6 +40,7 @@ zstyle ':prezto:load' pmodule \
   'history-substring-search' \
   'homebrew' \
   'python' \
+  'git' \
   'completion' \
   'prompt'
 
