--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -32,6 +32,9 @@
     fdiff = "!f() { git diff $@ --name-only | fzf -m --ansi --preview 'git diff $@ --color=always -- {-1}'; }; f"
 
     stash-pop-force = !git stash show -p | git apply && git stash drop
+    
+    # https://stackoverflow.com/questions/1186535/how-do-i-modify-a-specific-commit/48999882#48999882
+    amend-to = "!f() { SHA=`git rev-parse \"$1\"`; git stash -k && git commit --fixup \"$SHA\" && GIT_SEQUENCE_EDITOR=true git rebase --interactive --autosquash \"$SHA^\" && git stash pop; }; f"
 
 [status]
     submoduleSummary = true
@@ -51,3 +54,5 @@
     required = true
 [pull]
 	rebase = false
+[init]
+	defaultBranch = main
